# tga-job-test

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS.md  README.md  pyproject.toml
src/: main.py  requirements.txt
src/app/calculations/: metrics.py
src/app/chatgpt/: api.py
src/app/config/: __init__.py  globals.py  logger.py
src/app/db/: mysql.py  orm_queries.py
src/app/files/: generate.py
src/app/models/: survey.py
src/app/testing/: metrics_test.py
test-materials/: sql_queries.sql
