[tool.autoflake]
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
line-length = 100
preview = true
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
extend_skip = [".md"]
import_heading_firstparty = "Project"
import_heading_localfolder = "Local"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "External"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = "cronjob_snapshot"
line_length = 100
lines_after_imports = 2
multi_line_output = 3
profile = "black"
skip = [".git/", ".venv/", ".vscode/", "logs/", "__pycache__", "Dockerfile"]

[tool.poetry]
authors = ["MatiasGonzalez"]
description = "TGA Python Challenge"
name = "TGA"
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
PyMySQL = "^1.1.1"
SQLAlchemy = "^2.0.31"
python = "^3.12"
black = "^24.4.2"
pytest = "^8.2.2"
openai = "^1.35.10"
reportlab = "^4.2.2"
matplotlib = "^3.9.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"
poetry-plugin-export = "^1.5.0"
pre-commit = "*"

[tool.ruff]
line-length = 100
target-version = "py311"
